[gd_scene load_steps=5 format=3 uid="uid://qtpk8mtmyrqp"]

[ext_resource type="Texture2D" uid="uid://dsx4q267641fj" path="res://Assets/UI/battle_Label/battle_label.png" id="1_j0ohn"]
[ext_resource type="Theme" uid="uid://jw1iv3iji7mh" path="res://menu_scenes/MinimalUI/MinimalUI.tres" id="1_kqtrn"]
[ext_resource type="Script" path="res://menu_scenes/info_box_scenes/info_box.gd" id="2_7lij6"]

[sub_resource type="Theme" id="Theme_suseh"]

[node name="PanelContainer" type="PanelContainer"]
process_mode = 3
z_index = 15
offset_left = 32.0
offset_top = -180.0
offset_right = 186.0
offset_bottom = -14.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = SubResource("Theme_suseh")
script = ExtResource("2_7lij6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(71, 75.8552)
rotation = 1.5708
scale = Vector2(0.421571, 0.618203)
texture = ExtResource("1_j0ohn")

[node name="info_box" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_kqtrn")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
